--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Happy Girlfriend's Day</title>
+  <title>Happy Girlfriend's Day My Love</title>
   <style>
     body {
       background: #fce4ec;
@@ -111,7 +111,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 style="color: #db7093;">Happy Girlfriend's Day!</h1>
+    <h1 style="color: #db7093;">Happy Girlfriend's Day Babe! May we always stay together.</h1>
     <p class="bloom-text">Click or hover on the flower to make it bloom</p>
     
     <div class="flower" id="flower">
